Fix remaining form layout issues

--- a/src/app/components/role-selector/role-selector.scss
+++ b/src/app/components/role-selector/role-selector.scss
@@ -6,7 +6,7 @@
     width: 100%;
 
     [data-region="selector"] {
-        margin: 2rem auto 4rem;
+        margin: 2rem auto 0;
         max-width: 47rem;
         width: 100%;
     }
